--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
-    "ng2-markdown-to-html": "^1.1.2",
+    "markdown-to-html-pipe": "^1.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
